--- a/views/collection.ejs
+++ b/views/collection.ejs
@@ -10,7 +10,7 @@
       <div class="row">
 
         <div class="col-12 col-md-4">
-          <img src="/uploads/<%- collection.image %>" class="img-fluid sticky-top" style="top: 20px;" alt="<%- collection.name %>" loading="lazy">
+          <img src="/uploads/<%= collection.image %>" class="img-fluid sticky-top" style="top: 20px;" alt="<%- collection.name %>" loading="lazy">
         </div>
 
         <div class="col-12 col-md-8">
@@ -26,7 +26,10 @@
 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <a href="/collection" class="btn btn-primary btn-lg">Update</a>
-          <a href="/collection" class="btn btn-primary btn-dark btn-lg">Delete</a>
+          <form class="delete-form" action="/collection/<%= collection._id %>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete" class="btn">
+        </form>
+          <!-- <a href="/collection" class="btn btn-primary btn-dark btn-lg">Delete</a> -->
         </div>
 
 <% } %>
