--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <div class="col-12 col-lg-6">
       <h1 class="display-5 fw-bold mb-3">Sneaker Collection</h1>
       <p class="lead">
-        Explore our huge selection of sneakers from all your favourite brands. Find the sneaker you love and show off your collection by adding or deleting them!
+        Make a collection of your sneakers from all your favourite brands. Find the sneaker you love and show off your collection by adding or deleting them!
       </p>
   
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
