--- a/views/collection.ejs
+++ b/views/collection.ejs
@@ -25,10 +25,15 @@
         </div>
 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a href="/collection" class="btn btn-primary btn-lg">Update</a>
+          <form class="update-form" action="/collection/<%= collection._id %>/edit">
+            <input type="submit" value="Update" class="btn btn-primary btn-m">
+          </form>
+
+          <!-- <!-- <form class="edit-form" action="/edit-sneaker/<%= collection._id %>?_method=UPDATE" method="PUT"> -->
+         
           <form class="delete-form" action="/collection/<%= collection._id %>?_method=DELETE" method="POST">
-            <input type="submit" value="Delete" class="btn">
-        </form>
+            <input type="submit" value="Delete" class="btn btn-primary btn-dark btn-m">
+          </form>
           <!-- <a href="/collection" class="btn btn-primary btn-dark btn-lg">Delete</a> -->
         </div>
 
